tests/type-errors/09-comparison-type.flt
// Comparison operators require int
// --- Command: dotnet run --project FunLang -- --emit-type --expr "true < false" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected bool but got int
 --> <expr>:1:0-4
   = hint: Check that all branches of your expression return the same type
